@@ -33,8 +33,8 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\" $OpenBSD: sshd_config.5,v 1.140 2012/05/19 06:30:30 dtucker Exp $
-.Dd $Mdocdate: May 19 2012 $
+.\" $OpenBSD: sshd_config.5,v 1.141 2012/06/19 18:25:28 markus Exp $
+.Dd $Mdocdate: June 19 2012 $
 .Dt SSHD_CONFIG 5
 .Os
 .Sh NAME
@@ -707,15 +707,20 @@ Only a subset of keywords may be used on the lines following a
 .Cm Match
 keyword.
 Available keywords are
+.Cm AcceptEnv
 .Cm AllowAgentForwarding ,
+.Cm AllowGroups .
 .Cm AllowTcpForwarding ,
+.Cm AllowUsers ,
 .Cm AuthorizedKeysFile ,
 .Cm AuthorizedPrincipalsFile ,
 .Cm Banner ,
 .Cm ChrootDirectory ,
+.Cm DenyGroups ,
+.Cm DenyUsers ,
 .Cm ForceCommand ,
-.Cm GatewayPorts ,
 .Cm GSSAPIAuthentication ,
+.Cm GatewayPorts ,
 .Cm HostbasedAuthentication ,
 .Cm HostbasedUsesNameFromPacketOnly ,
 .Cm KbdInteractiveAuthentication ,
@@ -728,8 +733,8 @@ Available keywords are
 .Cm PermitRootLogin ,
 .Cm PermitTunnel ,
 .Cm PubkeyAuthentication ,
-.Cm RhostsRSAAuthentication ,
 .Cm RSAAuthentication ,
+.Cm RhostsRSAAuthentication ,
 .Cm X11DisplayOffset ,
 .Cm X11Forwarding
 and
